syntax = "proto3"; 

package contract;
option go_package = "github.com/liux0047/grpc-contract-test/contract";
import "google/protobuf/any.proto";

service ServiceConsumer {
    // Publish a contract for the consumer to the repository.
    rpc PublishContract(PublishContractRequest) 
    returns (PublishContractResponse) {}
}

message PublishContractRequest {
    Contract contract = 1;
}

message PublishContractResponse {
    bool status = 1;
    string error_msg = 2;
}

service ServiceProvider {
    // Runs the provider verfication tests.
    rpc VerificationTest(VerificationTestRequest) 
    returns (VerificationTestResponse) {}
}

message VerificationTestRequest {
    repeated Contract contracts = 1;
}

message VerificationTestResponse {
    bool passed = 1;
    repeated Violation violations = 2;
}

message Violation {
    string interaction = 1;
    string failure_msg = 2;
}

message Contract {
    string service = 1;
    string consumer = 2;
    repeated Interaction interactions = 3;
}

message Interaction {
    string name = 1;
    string method = 2;
    google.protobuf.Any  request = 3;
    google.protobuf.Any  response = 4;
    bool wantError = 5;
    CompositeRule rules = 6;
    repeated string preconditions = 7;
}

message CompositeRule {
    enum Operator {
        AND = 0;
        OR = 1;
    }
    Operator operator = 1;
    repeated IntRule intRules = 2;
    repeated StringRule stringRules = 3;
    repeated DoubleRule doubleRules = 4;
    repeated CompositeRule nestedRules = 5;
}

message IntRule {
    string field = 1;
    int64 min = 2;
    bool checkMin = 3;
    int64 max = 4;
    bool checkMax = 5;
    repeated int64 allowed = 6;
}

message DoubleRule {
    string field = 1;
    double min = 2;
    bool checkMin = 3;
    double max = 4;
    bool checkMax = 5;
}

message StringRule {
    string field = 1;
    string matchRegex = 2;
    repeated string allowed = 3;
}
